// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gel Close-Up Film Centre retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://www.ticketsource.com/close-up-cinema/t-qmaooqz",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1785528000000,
      },
    ],
    "showingId": "gel.now-765",
    "title": "The Liberated Film Club: Mica Levi",
    "url": "https://gel.now/events/765",
  },
]
`;

exports[`gel Finsbury Park Picturehouse retrieve and find events 1`] = `[]`;

exports[`gel Rio Cinema retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://riocinema.org.uk/Rio.dll/WhatsOn?f=2652932",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1789842600000,
      },
    ],
    "showingId": "gel.now-766",
    "title": "HAKEEM (+ Q&A and Acoustic Set)",
    "url": "https://gel.now/events/766",
  },
]
`;
